# tock

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: astronomy.rs  config.rs  database.rs  ics.rs  main.rs  notifications.rs  poller.rs  weather.rs
src/sources/: google.rs  outlook.rs
